[project]
name = "posbuzz-mcp"
version = "0.1.0"
description = "Local MCP server exposing the PosBuzz (cosmetic analysis) SaaS API as MCP tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
posbuzz-mcp = "posbuzz_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/posbuzz_mcp"]
